kubernetes-manifests/db-deployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: db-deployment
  labels:
    type: db
spec:
  template: 
    metadata:
      name: db-pod
      labels:
        type: db
    spec:
      containers:
        - name: db-container
          image: ghcr.io/sumanthmysore/bootcamp67-database:latest
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
  replicas: 1
  selector:
    matchLabels: 
      type: db
