kubernetes-manifests/mock-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-server-deployment
  labels:
    type: mock-server
spec:
  template: 
    metadata:
      name: mock-server-pod
      labels:
        type: mock-server
    spec:
      containers:
        - name: mock-server-container
          image: ghcr.io/sumanthmysore/bootcamp67-mockserver
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
  replicas: 2
  selector:
    matchLabels:
      type: mock-server
