kubernetes-manifests/be-accounts-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: be-accounts-service
  labels:
    type: be-accounts
spec:
  type: ClusterIP
  ports:
    - port: 9001
      targetPort: 9001
  selector:
    type: be-accounts
