kubernetes-manifests/be-api-gateway-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: be-api-gateway-service
  labels:
    type: be-api-gateway
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    type: be-api-gateway
