kubernetes-manifests/be-businessdetails-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: be-businessdetails-service
  labels:
    type: be-businessdetails
spec:
  type: ClusterIP
  ports:
    - port: 9002
      targetPort: 9002
  selector:
    type: be-businessdetails
