kubernetes-manifests/be-service-registry-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: be-service-registry-service
  labels:
    type: be-service-registry
spec:
  type: ClusterIP
  ports:
    - port: 8762
      targetPort: 8762
  selector:
    type: be-service-registry
