kubernetes-manifests/be-transactions-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: be-transactions-service
  labels:
    type: be-transactions
spec:
  type: ClusterIP
  ports:
    - port: 9003
      targetPort: 9003
  selector:
    type: be-transactions
