kubernetes-manifests/be-users-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: be-users-service
  labels:
    type: be-users
spec:
  type: ClusterIP
  ports:
    - port: 9004
      targetPort: 9004
  selector:
    type: be-users
