kubernetes-manifests/db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    type: db
spec:
  type: NodePort
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30036
  selector:
    type: db
