kubernetes-manifests/fe-service.yml
apiVersion: v1
kind: Service
metadata: 
  name: fe-service
  labels:
    type: fe
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    type: fe
