kubernetes-manifests/ingress-resource-be.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-be
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: bc67-ag.fe-assignment.tk
      http:
        paths:

          - backend:
              service:
                name: be-api-gateway-service
                port:
                  number: 9000
            pathType: Prefix
            path: /

          - backend:
              service:
                name: be-accounts-service
                port:
                  number: 9001
            pathType: Prefix
            path: /(api)/(accounts)(/|$)(.*)

          - backend:
              service:
                name: be-businessdetails-service
                port:
                  number: 9002
            pathType: Prefix
            path: /(api)/(businessdetails)(/|$)(.*)

          - backend:
              service:
                name: be-transactions-service
                port:
                  number: 9003
            pathType: Prefix
            path: /(api)/(transactions)(/|$)(.*)

          - backend:
              service:
                name: be-users-service
                port:
                  number: 9004
            pathType: Prefix
            path: /(api)/(users)(/|$)(.*)
