kubernetes-manifests/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:

    - host: bc67-ms.fe-assignment.tk
      http: 
        paths:
          - backend:
              service:
                name: mock-server-service
                port:
                  number: 3005
            pathType: Prefix
            path: /

    - host: bc67-fe.fe-assignment.tk
      http: 
        paths:
          - backend:
              service:
                name: fe-service
                port:
                  number: 8080
            pathType: Prefix
            path: /

    - host: bc67-sr.fe-assignment.tk
      http: 
        paths:
          - backend:
              service:
                name: be-service-registry-service
                port:
                  number: 8762
            pathType: Prefix
            path: /
